# Brake

./: .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  pyproject.toml  requirements.txt  start-brake-dev.bat  start-brake.vbs
brake/: __init__.py  __main__.py  autostart.py  boot.py  branding.py  config.py  desktop_bridge.py  detection_events.py  escalation.py  incident_memory.py  paths.py  readiness.py  runtime.py  single_instance.py  test_mode.py  uninstall_guard.py
config/: settings.default.yaml
desktop/: MIGRATION_PLAN.md  README.md  index.html  package-lock.json  package.json
docs/: BRAND_COPY.md  FAQ.md  INSTALL.md  LAUNCH_CHECKLIST.md  METRICS.md  RECOVERY_CODE.md  TROUBLESHOOTING.md  UNINSTALL.md  USER_GUIDE.md
installer/: create_shortcuts.ps1  install.bat  register_service.ps1  set_acls.ps1  stop_for_update.ps1  uninstall.bat  unregister_service.ps1
lockitup/: __init__.py  __main__.py  autostart.py  boot.py  config.py  desktop_bridge.py  escalation.py  logging_setup.py  paths.py  readiness.py  runtime.py  test_mode.py  uninstall_guard.py
packaging/: Brake.iss  LockItUp.iss  build_electron_package.ps1  build_inno.ps1  build_pyinstaller.ps1  build_windows_installer.ps1  entry_agent.py  entry_boot.py  entry_bridge.py  entry_gui.py  entry_lockout.py  entry_service.py  entry_uninstall_guard.py  entry_watchdog.py  set_exe_icon.ps1
scripts/: build_illustrated_detector_package.ps1  check_source_install.ps1  doctor.ps1
tests/: test_agent_lifecycle.py  (+21 more)
(+101 files in other folders)
